# drift-monitor

./: .gitignore  README.md  pyproject.toml
docs/: generate_charts.py
drift_monitor/: __init__.py  __main__.py  cli.py  harness.py  scoring.py  simulate.py  storage.py  window.py
drift_monitor/instruments/: __init__.py  base.py  behavioral.py  ghost_lexicon.py  semantic.py
examples/: autoresearch_adapter.py  basic_usage.py  jsonl_pipeline.py  local_harness_test.py  scan_all_branches.py
tests/: test_behavioral.py  test_cli.py  test_ghost_lexicon.py  test_harness.py  test_scoring.py  test_semantic.py  test_simulate.py
validation/r1/: results.tsv
validation/r3/: logs_r3.txt  results.tsv
